# TNK_SteelTrack

./: .env.example  .gitattributes  .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
ai/: AI_CONTEXT.md  CLAUDE.md
ai/checklists/: backend_checklist.md  feature_checklist.md  frontend_checklist.md  migration_checklist.md  release_checklist.md  security_checklist.md
ai/decisions/: 001-why-htmx.md  002-service-layer.md  003-no-repository-pattern.md  004-background-job-strategy.md  005-api-versioning.md
ai/feature_maps/: auth.md  billing.md  inventory.md  notifications.md  reporting.md
ai/prompts/: architecture_review.md  bug_fix.md  build_api.md  build_htmx_ui.md  code_review.md  decompose_task.md  migration.md  new_feature.md  optimize_query.md  refactor.md  write_tests.md
ai/rules/: ACCESSIBILITY_RULES.md  ANTI_PATTERNS.md  API_CONVENTION.md  ARCHITECTURE.md  BACKEND_RULES.md  CSS_RULES.md  DATABASE_RULES.md  FRONTEND_RULES.md  GIT_RULES.md  HTMX_RULES.md  MIGRATION_RULES.md  PERFORMANCE_RULES.md  PROJECT_RULES.md  SECURITY_RULES.md  TESTING_RULES.md
ai/skills/: api_design.md  bug_fixing.md  code_review.md  debugging.md  deployment_preparation.md  feature_implementation.md  htmx_interactions.md  incident_analysis.md  performance_optimization.md  refactoring.md  schema_migration.md  security_review.md  test_writing.md  ui_component_creation.md
ai/templates/: architecture_decision.md  bug_report.md  (+2 more)
demo/: login_preview.html
frontend/: tailwind.config.js
tests/: conftest.py
(+68 files in other folders)
