[project]
name = "tnk-steeltrack"
version = "0.1.0"
description = "TNK SteelTrack - Hệ thống quản lý thép chuyên nghiệp"
requires-python = ">=3.12"

dependencies = [
    "django>=5.1,<5.2",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "gunicorn>=22.0",
    "django-htmx>=1.19",
    "whitenoise[brotli]>=6.7",
    "pillow>=10.0",
    "python-decouple>=3.8",
    "sentry-sdk[django]>=2.0",
    "django-ratelimit>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "services", "selectors", "tasks"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=backend --cov-report=term-missing --no-header -rN"
testpaths = ["tests"]

[tool.coverage.run]
source = ["backend"]
omit = ["*/migrations/*", "*/tests/*", "manage.py"]
